src/objects/LedgerTransaction__c.object
<CustomObject>
    <fields>
        <fullName>BillItemsCreditItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill Items/Credit Item</label>
        <referenceTo>BillItem__c</referenceTo>
        <relationshipLabel>Ledger Transactions</relationshipLabel>
        <relationshipName>LedgerTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ledger__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ledger</label>
        <referenceTo>Ledger__c</referenceTo>
        <relationshipLabel>Ledger Transactions</relationshipLabel>
        <relationshipName>LedgerTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaymentRefund__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment/Refund</label>
        <referenceTo>PaymentRefund__c</referenceTo>
        <relationshipLabel>Ledger Transactions</relationshipLabel>
        <relationshipName>LedgerTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Ledger Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Ledger Trans Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ledger Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>